[package]
name = "dither"
version = "0.1.0"
edition = "2021"
authors = ["Nick Willett-Jeffries <nwillettjeffries@gmail.com>"]
description = "A monochromatic image dithering tool"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rand = { version = "0.8", features = ["small_rng"] }
